fix magzine on mobile view

--- a/src/pages/MagzineDetails/index.scss
+++ b/src/pages/MagzineDetails/index.scss
@@ -592,10 +592,10 @@ iframe {
 .zoom_div {
   background: black;
   width: 40rem;
-  height: 25rem;
+  height: 30rem;
   justify-content: center;
   align-items: center;
-  margin: 2.5rem 9.6rem,
+  margin: 1.5rem 9.6rem,
 
 }
 
